--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,8 +94,7 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply text-blue-600 hover:text-blue-800;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -116,4 +115,8 @@ input,
 select,
 textarea {
   @apply rounded border p-2 outline-none ring-indigo-300 focus:ring;
+}
+
+.dropdown-link {
+  @apply block p-2 hover:bg-gray-200;
 }
