--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,3 +123,11 @@ textarea {
 .dropdown-link {
   @apply block p-2 hover:bg-gray-200;
 }
+
+.alert-error {
+  @apply my-3 rounded-lg bg-red-100 p-3 text-red-700;
+}
+
+.alert-success {
+  @apply m-3 rounded-lg bg-green-100 p-3 text-green-700;
+}
